fix long text breaking out of container on mobile

--- a/sec.club/src/views/Article/Article.scss
+++ b/sec.club/src/views/Article/Article.scss
@@ -4,6 +4,7 @@ article {
 	font-size: 1.15em;
 	line-height: 1.8;
 	padding-bottom: 8px;
+	overflow-wrap: break-word;
 
 	a:any-link {
 		text-decoration: none;
